k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-task-app
  namespace: devsecops
  labels:
    app: secure-task-app
    app.kubernetes.io/name: secure-task-app
    app.kubernetes.io/version: "1.0.0"
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-task-app
  template:
    metadata:
      labels:
        app: secure-task-app
        app.kubernetes.io/name: secure-task-app
        app.kubernetes.io/version: "1.0.0"
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: secure-task-app
          image: mohamedazizaguir/secure-task-app:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
