k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-task-service
  namespace: devsecops
  labels:
    app: secure-task-app
    app.kubernetes.io/name: secure-task-app
    environment: dev
spec:
  selector:
    app: secure-task-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: metrics
      port: 8080
      targetPort: 5000
  type: NodePort
